[gd_scene load_steps=3 format=1]

[ext_resource path="res://media/main_menu/main_menu.thm" type="Theme" id=1]
[ext_resource path="res://src/multiplayer/lobby.gd" type="Script" id=2]

[node name="multiplayer" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 50.0
margin/top = 125.0
margin/right = 50.0
margin/bottom = 100.0
script/script = ExtResource( 2 )

[node name="header" type="PanelContainer" parent="."]

visibility/self_opacity = 0.6
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 0.0
margin/right = -300.0
margin/bottom = 99.0

[node name="vbox" type="VBoxContainer" parent="header"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 593.0
margin/bottom = 108.0
custom_constants/separation = 15
alignment = 0

[node name="title" type="Label" parent="header/vbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 586.0
margin/bottom = 38.0
text = "Freedom Hunter Multiplayer Lobby"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="input" type="HBoxContainer" parent="header/vbox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 53.0
margin/right = 586.0
margin/bottom = 101.0
custom_constants/separation = 15
alignment = 0

[node name="username-label" type="Label" parent="header/vbox/input"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 156.0
margin/bottom = 43.0
text = "Username:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="username" type="LineEdit" parent="header/vbox/input"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 171.0
margin/top = 0.0
margin/right = 586.0
margin/bottom = 48.0
placeholder/text = "Enter player\'s name"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="direct" type="PanelContainer" parent="."]

visibility/self_opacity = 0.6
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1325.0
margin/top = 150.0
margin/right = 1803.0
margin/bottom = 754.0

[node name="vbox" type="VBoxContainer" parent="direct"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 471.0
margin/bottom = 597.0
custom_constants/separation = 10
alignment = 0

[node name="title" type="Label" parent="direct/vbox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 464.0
margin/bottom = 38.0
text = "Direct Connection"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="client" type="VBoxContainer" parent="direct/vbox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 48.0
margin/right = 464.0
margin/bottom = 310.0
custom_constants/separation = 20
alignment = 0

[node name="Label" type="Label" parent="direct/vbox/client"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 464.0
margin/bottom = 38.0
text = "Client"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="input" type="GridContainer" parent="direct/vbox/client"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 58.0
margin/right = 464.0
margin/bottom = 164.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="host-label" type="Label" parent="direct/vbox/client/input"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 154.0
margin/bottom = 43.0
text = "Host: "
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="host" type="LineEdit" parent="direct/vbox/client/input"]

rect/min_size = Vector2( 300, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 164.0
margin/top = 0.0
margin/right = 464.0
margin/bottom = 48.0
placeholder/text = "IP address or hostname"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="port-label" type="Label" parent="direct/vbox/client/input"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 63.0
margin/right = 154.0
margin/bottom = 101.0
text = "UDP port: "
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="port" type="LineEdit" parent="direct/vbox/client/input"]

rect/min_size = Vector2( 300, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 164.0
margin/top = 58.0
margin/right = 464.0
margin/bottom = 106.0
text = "30500"
placeholder/text = "UDP port"
placeholder/alpha = 0.6
max_length = 5
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="connect" type="Button" parent="direct/vbox/client"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 184.0
margin/right = 464.0
margin/bottom = 262.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Connect"
flat = false

[node name="server" type="VBoxContainer" parent="direct/vbox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 320.0
margin/right = 464.0
margin/bottom = 590.0
custom_constants/separation = 20
alignment = 0

[node name="Label" type="Label" parent="direct/vbox/server"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 464.0
margin/bottom = 38.0
text = "Server"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="input" type="GridContainer" parent="direct/vbox/server"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 58.0
margin/right = 464.0
margin/bottom = 106.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="port-label" type="Label" parent="direct/vbox/server/input"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 154.0
margin/bottom = 43.0
text = "UDP port: "
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="port" type="LineEdit" parent="direct/vbox/server/input"]

rect/min_size = Vector2( 300, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 164.0
margin/top = 0.0
margin/right = 464.0
margin/bottom = 48.0
text = "30500"
placeholder/text = "UDP port"
placeholder/alpha = 0.6
max_length = 5
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="announce" type="CheckButton" parent="direct/vbox/server"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 123.0
margin/top = 126.0
margin/right = 340.0
margin/bottom = 172.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Announce"
flat = false
align = 0

[node name="start" type="Button" parent="direct/vbox/server"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 192.0
margin/right = 464.0
margin/bottom = 270.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start Server"
flat = false

[node name="lobby" type="PanelContainer" parent="."]

visibility/self_opacity = 0.6
anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 277.5
margin/right = 1216.0
margin/bottom = -322.5

[node name="grid" type="GridContainer" parent="lobby"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 1209.0
margin/bottom = 593.0
columns = 5

[node name="hostname" type="Label" parent="lobby/grid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 144.0
margin/bottom = 38.0
text = "Hostname"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="port" type="Label" parent="lobby/grid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 154.0
margin/top = 0.0
margin/right = 220.0
margin/bottom = 38.0
text = "Port"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="players" type="Label" parent="lobby/grid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 230.0
margin/top = 0.0
margin/right = 342.0
margin/bottom = 38.0
text = "Players"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="max_players" type="Label" parent="lobby/grid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 352.0
margin/top = 0.0
margin/right = 529.0
margin/bottom = 38.0
text = "Max players"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="space" type="Control" parent="lobby/grid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 539.0
margin/top = 19.0
margin/right = 539.0
margin/bottom = 19.0

[node name="refresh" type="Timer" parent="lobby"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[connection signal="text_changed" from="header/vbox/input/username" to="." method="_on_username_text_changed"]

[connection signal="pressed" from="direct/vbox/client/connect" to="." method="_on_connect_pressed"]

[connection signal="pressed" from="direct/vbox/server/start" to="." method="_on_start_pressed"]

[connection signal="timeout" from="lobby/refresh" to="." method="update_servers_list"]


